--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <strong>PREDICTING WITH REYMON.</strong>
         </p>
         <p>
-            Here you will find different options for
+            Here you will find different options to
             help you deal with real-world predictions
             such as bets, global processes on markets,
             etc.
@@ -34,7 +34,7 @@
         </ul>
         <p>Consult your new future!</p>
         <p>
-            Read this news, search something you want to predict and just tell me!
+            Read these news, search something you want to predict and just tell me!
             <a href="files/NewsTitlesElPais.txt">
                 List of news.
             </a>
