--- a/index.html
+++ b/index.html
@@ -1,42 +1,111 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html
-        PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
-<head>
-    <meta charset="utf-8">
-    <title>Predicting with Reymon</title>
-    <link href="styles/style.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport"
+              content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <title>Rey predictions</title>
+        <link rel="stylesheet"
+              href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+        <link rel="stylesheet"
+              href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    </head>
 
-<body>
-    <h1>Predicting futures</h1>
-    <img src="images/logo-reymon.png" alt="My Logo: A tree wrapping me.">
-    <p>
-        This is my test web page for the project
-        <strong>PREDICTING WITH REYMON.</strong>
-    </p>
-    <p>
-        Here you will find different options to help you deal with real-world predictions such as bets, global processes on markets, etc.
-    </p>
-    <h2>Predictors</h2>
-    <ul>
-        <li>Football matches</li>
-        <li>Prices of flights</li>
-        <li>Prices of products from certain places</li>
-        <li>And much more!</li>
-    </ul>
-    <p>Consult your new future!</p>
-    <p>
-        Read these news, search something you want to predict and just tell me!
-        <a href="files/NewsTitlesElPais.txt">
-                List of news.
-            </a>
-    </p>
-    <button>Change user</button>
-    <script src="scripts/main.js"></script>
-</body>
+    <body>
+
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-3">
+            <div class="container">
+                <a href="#" class="navbar-brand mr-3">PREDict</a>
+                <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarCollapse">
+                    <div class="navbar-nav">
+                        <a href="#" class="nav-item nav-link active">Home</a>
+                        <a href="#" class="nav-item nav-link">Services</a>
+                        <a href="#" class="nav-item nav-link">About</a>
+                        <a href="#" class="nav-item nav-link">Contact</a>
+                    </div>
+                    <div class="navbar-nav ml-auto">
+                        <a href="#" class="nav-item nav-link">Register</a>
+                        <a href="#" class="nav-item nav-link">Login</a>
+                    </div>
+                </div>
+            </div>
+        </nav>
+
+        <div class="container">
+            <div class="jumbotron">
+                <h1>Customizing your Predictions</h1>
+                <p class="lead">
+                    Select your plan and start hacking the future.
+                    At <a href="https://reymom.github.io/" target="_blank">reymom.github.io</a>
+                    you will find assessment on what, how much and when you should get things done
+                    in order to obtain the cheapest prices and the highest rewards. Some of our predictions:
+                </p>
+                <div class="row">
+                    <div class="col-6">
+                        <ul class="lead">
+                            <li>Football matches</li>
+                            <li>Prices of flights</li>
+                            <li>Prices of technology products</li>
+                            <li>Whatever you have in your mind</li>
+                        </ul>
+                        <p class="lead">Consult your new future!</p>
+                        <p><a href="https://reymom.github.io/"
+                              target="_blank"
+                              class="btn btn-success btn-lg">
+                            Get started today</a></p>
+                    </div>
+                    <div class="col-6 text-right">
+                        <img src="images/logo-reymon.png" alt="My Logo: Witch wrapping me.">
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <h2>Sport bets</h2>
+                    <p>Betting houses arrange their offers so that they never loose on average. Nevertheless,
+                        we explode flaws and statistical deviations in order to train our most advanced
+                        Artificial Intelligence that allows you to crush the odds.</p>
+                    <p><a href="https://reymom.github.io/"
+                          target="_blank"
+                          class="btn btn-success">Learn More »</a></p>
+                </div>
+                <div class="col-md-4">
+                    <h2>Stock markets</h2>
+                    <p>We help you develop the best strategy in order to invest efficiently in stock markets. Moreover,
+                    we guide you through the exploration of the best stocks and moments to invest in.</p>
+                    <p><a href="https://reymom.github.io/" target="_blank" class="btn btn-success">Learn More »</a></p>
+                </div>
+                <div class="col-md-4">
+                    <h2>Products</h2>
+                    <p>Willing to buy a brand-new mobile phone, either a flight to your desired vacation's destiny?.
+                    We show you an accurate prediction for the prices of lots of products so you can decide to buy it
+                    in the precise optimum moment.</p>
+                    <p><a href="https://reymom.github.io/" target="_blank" class="btn btn-success">Learn More »</a></p>
+                </div>
+            </div>
+            <hr>
+            <footer>
+                <div class="row">
+                    <div class="col-md-6">
+                        <p>Copyright &copy; 2019 ReyPredIct</p>
+                    </div>
+                    <div class="col-md-6 text-md-right">
+                        <a href="#" class="text-dark">Terms of Use</a>
+                        <span class="text-muted mx-2">|</span>
+                        <a href="#" class="text-dark">Privacy Policy</a>
+                    </div>
+                </div>
+            </footer>
+        </div>
+        <button name="button1">Change user</button>
+        <script src="scripts/main.js"></script>
+    </body>
 
 </html>
