insphere: obfuscated cat

--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
 
         <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-3">
             <div class="container">
-                <a href="#" class="navbar-brand mr-3">PREDict</a>
+                <a href="#" class="navbar-brand mr-3">Obfuscated Cat</a>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav">
                         <a href="#" class="nav-item nav-link active">Home</a>
-                        <a href="#" class="nav-item nav-link">Services</a>
-                        <a href="#" class="nav-item nav-link">About</a>
-                        <a href="#" class="nav-item nav-link">Contact</a>
+                        <a href="#" class="nav-item nav-link">Channels</a>
+                        <a href="#" class="nav-item nav-link">Blog</a>
+                        <a href="#" class="nav-item nav-link">Updates</a>
                     </div>
                     <div class="navbar-nav ml-auto">
                         <a href="#" class="nav-item nav-link">Register</a>
@@ -41,53 +41,49 @@
 
         <div class="container">
             <div class="jumbotron">
-                <h1>Customizing your Predictions</h1>
+                <h1>Empowering AI-Driven Insights with Obfuscated Cat</h1>
                 <p class="lead">
-                    Select your plan and start hacking the future.
-                    At <a href="https://reymom.github.io/" target="_blank">reymom.github.io</a>
-                    you will find assessment on what, how much and when you should get things done
-                    in order to obtain the cheapest prices and the highest rewards. Some of our predictions:
+                    Dive into the future of content and interaction dynamics. 
+                    <a href="https://reymom.github.io/" target="_blank">reymom.github.io</a> 
+                    offers a cutting-edge platform for studying the science of virality through AI and game theory. 
+                    Unlock insights and optimize your strategies for maximum impact. Explore key areas:
                 </p>
                 <div class="row">
                     <div class="col-6">
                         <ul class="lead">
-                            <li>Football matches</li>
-                            <li>Prices of flights</li>
-                            <li>Prices of technology products</li>
-                            <li>Whatever you have in your mind</li>
+                            <li>Content virality trends</li>
+                            <li>AI simulations of digital ecosystems</li>
+                            <li>Game theory-driven engagement strategies</li>
+                            <li>Crypto and AI-based social experiments</li>
                         </ul>
-                        <p class="lead">Consult your new future!</p>
-                        <p><a href="https://reymom.github.io/"
-                              target="_blank"
-                              class="btn btn-success btn-lg">
-                            Get started today</a></p>
+                        <p class="lead">Start understanding the future today!</p>
+                        <p>
+                            <a href="https://reymom.github.io/" target="_blank" class="btn btn-success btn-lg">
+                                Explore Now
+                            </a>
+                        </p>
                     </div>
                     <div class="col-6 text-right">
-                        <img src="images/logo-reymon.png" alt="My Logo: Witch wrapping me.">
+                        <img src="images/obfuscated_cat_flying.png" alt="Obfuscated Cat: Shaping Future Trends">
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-4">
-                    <h2>Sport bets</h2>
-                    <p>Betting houses arrange their offers so that they never loose on average. Nevertheless,
-                        we explode flaws and statistical deviations in order to train our most advanced
-                        Artificial Intelligence that allows you to crush the odds.</p>
+                    <h2>Virality Analysis</h2>
+                    <p>Understand how trends emerge and spread with our AI-powered tools. Analyze what drives virality in real-time.</p>
                     <p><a href="https://reymom.github.io/"
                           target="_blank"
                           class="btn btn-success">Learn More »</a></p>
                 </div>
                 <div class="col-md-4">
-                    <h2>Stock markets</h2>
-                    <p>We help you develop the best strategy in order to invest efficiently in stock markets. Moreover,
-                    we guide you through the exploration of the best stocks and moments to invest in.</p>
+                    <h2>Game Theory Insights</h2>
+                    <p>Leverage strategic interactions and maximize engagement using AI-trained models inspired by game theory principles.</p>
                     <p><a href="https://reymom.github.io/" target="_blank" class="btn btn-success">Learn More »</a></p>
                 </div>
                 <div class="col-md-4">
-                    <h2>Products</h2>
-                    <p>Willing to buy a brand-new mobile phone, either a flight to your desired vacation's destiny?.
-                    We show you an accurate prediction for the prices of lots of products so you can decide to buy it
-                    in the precise optimum moment.</p>
+                    <h2>AI & Crypto Experiments</h2>
+                    <p>Explore the intersection of AI and decentralized technologies to unlock new paradigms in social media dynamics.</p>
                     <p><a href="https://reymom.github.io/" target="_blank" class="btn btn-success">Learn More »</a></p>
                 </div>
             </div>
@@ -95,18 +91,16 @@
             <footer>
                 <div class="row">
                     <div class="col-md-6">
-                        <p>Copyright &copy; 2019 ReyPredIct</p>
+                        <p>Copyright &copy; 2025 inSphere AI</p>
                     </div>
                     <div class="col-md-6 text-md-right">
-                        <a href="#" class="text-dark">Terms of Use</a>
+                        <a href="./pages/terms.html" class="text-dark">Terms of Service</a>
                         <span class="text-muted mx-2">|</span>
-                        <a href="#" class="text-dark">Privacy Policy</a>
+                        <a href="./pages/policy.html" class="text-dark">Privacy Policy</a>
                     </div>
                 </div>
             </footer>
         </div>
-        <button name="button1">Change user</button>
-        <script src="scripts/main.js"></script>
     </body>
 
 </html>
