reformat icon style

--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
     <head>
         <meta charset="UTF-8">
         <meta name="viewport"
               content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>Rey predictions</title>
+        <title>Insphere: Obfuscated Cat</title>
         <link rel="stylesheet"
               href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
         <link rel="stylesheet"
@@ -13,7 +12,8 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-        <link rel="icon" type="image/png" href="images/favicon.png">
+        
+        <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     </head>
 
     <body>
@@ -26,7 +26,6 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav">
-                        <a href="#" class="nav-item nav-link active">Home</a>
                         <a href="#" class="nav-item nav-link">Channels</a>
                         <a href="#" class="nav-item nav-link">Blog</a>
                         <a href="#" class="nav-item nav-link">Updates</a>
@@ -64,7 +63,7 @@
                         </p>
                     </div>
                     <div class="col-6 text-right">
-                        <img src="images/obfuscated_cat_flying.png" alt="Obfuscated Cat: Shaping Future Trends">
+                        <img src="images/obfuscated_cat_flying.png" alt="Obfuscated Cat: Shaping Future Trends" style="width: 300px;" class="rounded-circle">
                     </div>
                 </div>
             </div>
@@ -82,7 +81,7 @@
                     <p><a href="https://reymom.github.io/" target="_blank" class="btn btn-success">Learn More »</a></p>
                 </div>
                 <div class="col-md-4">
-                    <h2>AI & Crypto Experiments</h2>
+                    <h2>AI & Crypto</h2>
                     <p>Explore the intersection of AI and decentralized technologies to unlock new paradigms in social media dynamics.</p>
                     <p><a href="https://reymom.github.io/" target="_blank" class="btn btn-success">Learn More »</a></p>
                 </div>
