--- a/index.html
+++ b/index.html
@@ -1,105 +1,153 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport"
-              content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>Insphere: Obfuscated Cat</title>
-        <link rel="stylesheet"
-              href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-        <link rel="stylesheet"
-              href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-        
-        <link rel="icon" type="image/x-icon" href="images/favicon.ico">
-    </head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <title>Insphere: Obfuscated Cat</title>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
-    <body>
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
+  </head>
 
-        <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-3">
-            <div class="container">
-                <a href="#" class="navbar-brand mr-3">Obfuscated Cat</a>
-                <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarCollapse">
-                    <div class="navbar-nav">
-                        <a href="#" class="nav-item nav-link">Channels</a>
-                        <a href="#" class="nav-item nav-link">Blog</a>
-                        <a href="#" class="nav-item nav-link">Updates</a>
-                    </div>
-                    <div class="navbar-nav ml-auto">
-                        <a href="#" class="nav-item nav-link">Register</a>
-                        <a href="#" class="nav-item nav-link">Login</a>
-                    </div>
-                </div>
-            </div>
-        </nav>
-
-        <div class="container">
-            <div class="jumbotron">
-                <h1>Empowering AI-Driven Insights with Obfuscated Cat</h1>
-                <p class="lead">
-                    Dive into the future of content and interaction dynamics. 
-                    <a href="https://reymom.github.io/" target="_blank">reymom.github.io</a> 
-                    offers a cutting-edge platform for studying the science of virality through AI and game theory. 
-                    Unlock insights and optimize your strategies for maximum impact. Explore key areas:
-                </p>
-                <div class="row">
-                    <div class="col-6">
-                        <ul class="lead">
-                            <li>Content virality trends</li>
-                            <li>AI simulations of digital ecosystems</li>
-                            <li>Game theory-driven engagement strategies</li>
-                            <li>Crypto and AI-based social experiments</li>
-                        </ul>
-                        <p class="lead">Start understanding the future today!</p>
-                        <p>
-                            <a href="https://reymom.github.io/" target="_blank" class="btn btn-success btn-lg">
-                                Explore Now
-                            </a>
-                        </p>
-                    </div>
-                    <div class="col-6 text-right">
-                        <img src="images/obfuscated_cat_flying.png" alt="Obfuscated Cat: Shaping Future Trends" style="width: 300px;" class="rounded-circle">
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-4">
-                    <h2>Virality Analysis</h2>
-                    <p>Understand how trends emerge and spread with our AI-powered tools. Analyze what drives virality in real-time.</p>
-                    <p><a href="https://reymom.github.io/"
-                          target="_blank"
-                          class="btn btn-success">Learn More »</a></p>
-                </div>
-                <div class="col-md-4">
-                    <h2>Game Theory Insights</h2>
-                    <p>Leverage strategic interactions and maximize engagement using AI-trained models inspired by game theory principles.</p>
-                    <p><a href="https://reymom.github.io/" target="_blank" class="btn btn-success">Learn More »</a></p>
-                </div>
-                <div class="col-md-4">
-                    <h2>AI & Crypto</h2>
-                    <p>Explore the intersection of AI and decentralized technologies to unlock new paradigms in social media dynamics.</p>
-                    <p><a href="https://reymom.github.io/" target="_blank" class="btn btn-success">Learn More »</a></p>
-                </div>
-            </div>
-            <hr>
-            <footer>
-                <div class="row">
-                    <div class="col-md-6">
-                        <p>Copyright &copy; 2025 inSphere AI</p>
-                    </div>
-                    <div class="col-md-6 text-md-right">
-                        <a href="./pages/terms.html" class="text-dark">Terms of Service</a>
-                        <span class="text-muted mx-2">|</span>
-                        <a href="./pages/policy.html" class="text-dark">Privacy Policy</a>
-                    </div>
-                </div>
-            </footer>
+  <body>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-3">
+      <div class="container">
+        <a href="#" class="navbar-brand mr-3">Obfuscated Cat</a>
+        <button
+          type="button"
+          class="navbar-toggler"
+          data-toggle="collapse"
+          data-target="#navbarCollapse"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+          <div class="navbar-nav">
+            <a href="#" class="nav-item nav-link">Channels</a>
+            <a href="#" class="nav-item nav-link">Blog</a>
+            <a href="#" class="nav-item nav-link">Updates</a>
+          </div>
+          <div class="navbar-nav ml-auto">
+            <a href="#" class="nav-item nav-link">Register</a>
+            <a href="#" class="nav-item nav-link">Login</a>
+          </div>
         </div>
-    </body>
+      </div>
+    </nav>
 
+    <div class="container">
+      <div class="jumbotron">
+        <h1>Empowering AI-Driven Insights with Obfuscated Cat</h1>
+        <p class="lead">
+          Dive into the future of content and interaction dynamics.
+          <a href="https://reymom.github.io/" target="_blank"
+            >reymom.github.io</a
+          >
+          offers a cutting-edge platform for studying the science of virality
+          through AI and game theory. Unlock insights and optimize your
+          strategies for maximum impact. Explore key areas:
+        </p>
+        <div class="row">
+          <div class="col-6">
+            <ul class="lead">
+              <li>Content virality trends</li>
+              <li>AI simulations of digital ecosystems</li>
+              <li>Game theory-driven engagement strategies</li>
+              <li>Crypto and AI-based social experiments</li>
+            </ul>
+            <p class="lead">Start understanding the future today!</p>
+            <p>
+              <a
+                href="https://reymom.github.io/"
+                target="_blank"
+                class="btn btn-success btn-lg"
+              >
+                Explore Now
+              </a>
+            </p>
+          </div>
+          <div class="col-6 text-right">
+            <img
+              src="images/obfuscated_cat_flying.png"
+              alt="Obfuscated Cat: Shaping Future Trends"
+              class="rounded-circle img-fluid responsive-image"
+            />
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">
+          <h2>Virality Analysis</h2>
+          <p>
+            Understand how trends emerge and spread with our AI-powered tools.
+            Analyze what drives virality in real-time.
+          </p>
+          <p>
+            <a
+              href="https://reymom.github.io/"
+              target="_blank"
+              class="btn btn-success"
+              >Learn More »</a
+            >
+          </p>
+        </div>
+        <div class="col-md-4">
+          <h2>Game Theory Insights</h2>
+          <p>
+            Leverage strategic interactions and maximize engagement using
+            AI-trained models inspired by game theory principles.
+          </p>
+          <p>
+            <a
+              href="https://reymom.github.io/"
+              target="_blank"
+              class="btn btn-success"
+              >Learn More »</a
+            >
+          </p>
+        </div>
+        <div class="col-md-4">
+          <h2>AI & Crypto</h2>
+          <p>
+            Explore the intersection of AI and decentralized technologies to
+            unlock new paradigms in social media dynamics.
+          </p>
+          <p>
+            <a
+              href="https://reymom.github.io/"
+              target="_blank"
+              class="btn btn-success"
+              >Learn More »</a
+            >
+          </p>
+        </div>
+      </div>
+      <hr />
+      <footer>
+        <div class="row">
+          <div class="col-md-6">
+            <p>Copyright &copy; 2025 inSphere AI</p>
+          </div>
+          <div class="col-md-6 text-md-right">
+            <a href="./pages/terms.html" class="text-dark">Terms of Service</a>
+            <span class="text-muted mx-2">|</span>
+            <a href="./pages/policy.html" class="text-dark">Privacy Policy</a>
+          </div>
+        </div>
+      </footer>
+    </div>
+  </body>
 </html>
