--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           <div class="col-md-6 text-md-right">
             <a href="./pages/terms.html" class="text-dark">Terms of Service</a>
             <span class="text-muted mx-2">|</span>
-            <a href="./pages/policy.html" class="text-dark">Privacy Policy</a>
+            <a href="./pages/privacy.html" class="text-dark">Privacy Policy</a>
           </div>
         </div>
       </footer>
