--- a/index.html
+++ b/index.html
@@ -23,30 +23,7 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-3">
-      <div class="container">
-        <a href="#" class="navbar-brand mr-3">Obfuscated Cat</a>
-        <button
-          type="button"
-          class="navbar-toggler"
-          data-toggle="collapse"
-          data-target="#navbarCollapse"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-          <div class="navbar-nav">
-            <a href="#" class="nav-item nav-link">Channels</a>
-            <a href="#" class="nav-item nav-link">Blog</a>
-            <a href="#" class="nav-item nav-link">Updates</a>
-          </div>
-          <div class="navbar-nav ml-auto">
-            <a href="#" class="nav-item nav-link">Register</a>
-            <a href="#" class="nav-item nav-link">Login</a>
-          </div>
-        </div>
-      </div>
-    </nav>
+    <div id="header"></div>
 
     <div class="container">
       <div class="jumbotron">
@@ -136,18 +113,10 @@
         </div>
       </div>
       <hr />
-      <footer>
-        <div class="row">
-          <div class="col-md-6">
-            <p>Copyright &copy; 2025 inSphere AI</p>
-          </div>
-          <div class="col-md-6 text-md-right">
-            <a href="./pages/terms.html" class="text-dark">Terms of Service</a>
-            <span class="text-muted mx-2">|</span>
-            <a href="./pages/privacy.html" class="text-dark">Privacy Policy</a>
-          </div>
-        </div>
-      </footer>
+
+      <div id="footer"></div>
+
+      <script src="/scripts/main.js"></script>
     </div>
   </body>
 </html>
