--- a/pages/terms.html
+++ b/pages/terms.html
@@ -15,6 +15,8 @@
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
   </head>
   <body>
+    <div id="header"></div>
+
     <div>
       <h1>Terms and Conditions</h1>
       <p>Last updated: January 19, 2025</p>
