--- a/pages/common/footer.html
+++ b/pages/common/footer.html
@@ -1,10 +1,8 @@
 <footer class="bg-light py-3 mt-4">
-  <div class="container">
+  <div class="container-fluid text-center">
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-12">
         <p>Copyright &copy; 2025 inSphere AI</p>
-      </div>
-      <div class="col-md-6 text-md-right">
         <a href="/pages/terms.html" class="text-dark">Terms of Service</a>
         <span class="text-muted mx-2">|</span>
         <a href="/pages/privacy.html" class="text-dark">Privacy Policy</a>
