--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       </div>
     </div>
 
-      <div class="row">
+      <div class="row mt-4">
         <div class="col-md-4">
           <h2>Virality Analysis</h2>
           <p>
